z-index fix

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@
     .link-cont {
       border-left: solid;
       position: absolute;
+      z-index: 1;
     }
 
     a {
